Fix header image on narrower displays

--- a/css/style.css
+++ b/css/style.css
@@ -283,6 +283,7 @@ table {
   -webkit-transform: translate(-50%, -50%);
       -ms-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+  max-width: none;
 }
 
 .parallax .cover .content {
